--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "postcss-loader": "^2.1.6",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
