--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.0",
