--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router": "^3.0.0"
+    "react-redux": "^5.0.7",
+    "react-router": "^3.0.0",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.0",
